# rvk

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindTurboJpeg.cmake
src/: CMakeLists.txt  buffer.cpp  buffer.h  read_buffer.cpp  read_buffer.h  reader_writer.cpp  reader_writer.h  rvk.h  rvk_stub.cpp  tcp.cpp  tcp.h  write_buffer.cpp  write_buffer.h
tests/: CMakeLists.txt  test_tcp.cpp
